@@ -1,3 +1,8 @@
+Sat Dec 14 11:25:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* object.c (rb_mod_const_defined): support nested class path as
+	  well as const_get.  [Feature #7414]
+
 Sat Dec 14 01:31:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (rb_rescue2): reuse tags pushed for body proc to protect
